--- a/styles.css
+++ b/styles.css
@@ -11243,6 +11243,14 @@ h1 span.text-primary {
   text-decoration: underline;
   color: #005f91;
 }
+.signature-image {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.signature-image img {
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
 
 
   
